--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node_typescript",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/main.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/main.ts"
