--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "node_typescript",
   "version": "1.0.0",
-  "main": "src/main.ts",
+  "main": "build/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/main.ts"
+    "build": "tsc",
+    "dev": "node src/main.ts",
+    "start": "node build/main.js"
   },
   "keywords": [],
   "author": "",
