--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "node_typescript",
   "version": "1.0.0",
-  "main": "build/main.js",
+  "main": "src/main.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "dev": "node src/main.ts",
-    "start": "node build/main.js"
+    "dev": "node src/main.ts"
   },
   "keywords": [],
   "author": "",
